--- a/NYC-Airbnb.ipynb
+++ b/NYC-Airbnb.ipynb
@@ -245,7 +245,7 @@
    "id": "e3e256cd",
    "metadata": {},
    "source": [
-    "#### Using the Folium Library to visalize the data above interactivly"
+    "#### Using the Folium library to visualize the data above interactivly"
    ]
   },
   {
